# old-filemanager

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
crates/aperture/: Cargo.toml  README.md
crates/aperture/src/: lib.rs
crates/aperture/src/geometry/: pos.rs  region.rs  size.rs
crates/aperture/src/view/: cell.rs  mod.rs
crates/lib/: Cargo.toml  README.md
crates/lib/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/roamer/: Cargo.toml  README.md
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs
crates/viewport/: Cargo.toml  README.md  out
crates/viewport/benches/: test_bench.rs
crates/viewport/src/: bounds.rs  buffer.rs  cell.rs  error.rs  lib.rs  util.rs  viewport.rs
crates/viewport/src/core/: buffer.rs
crates/viewport/src/display/: buffer.rs  cell.rs  mod.rs
crates/viewport/src/space/: bounds.rs  mod.rs  pos.rs  region.rs  size.rs
src/: lib.rs
src/core/: app.rs  args.rs  context.rs  mod.rs
src/tui/: bounds.rs  buffer.rs  cell.rs  mod.rs  region.rs  viewport.rs
