[package]
name = "opal"
version = "0.0.0"
authors = ["marc1 <m@marc.rs>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/marc1/opal/"
homepage = "https://github.com/marc1/opal/"

[[bin]]
name = "opal"
path = "crates/bin/opal.rs"

[workspace]
members = ["crates/lib", "crates/aperture"]

[dependencies]
opal-lib = { path = "crates/lib" }
