[package]
name = "viewport"
description = "A user-facing terminal manipulation library"
version = "0.0.0"
authors = ["marc1 <m@marc.rs>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/marc1/opal/tree/master/crates/viewport"
homepage = "https://github.com/marc1/opal/tree/master/crates/viewport"

[dependencies]
opal-macros = { path = "../macros" }
lazy_static = "1.4.0"

[dependencies.crossterm]
version = "0.18"
features = ["event-stream"]

